--- a/frontend/src/app/listing/listing.component.html
+++ b/frontend/src/app/listing/listing.component.html
@@ -1,4 +1,17 @@
-<app-grid [resultList]="accumulatedResult"></app-grid>
-<div style="width: 100%; text-align: center ">
-<button mat-raised-button color="primary" (click)="next()">Load More</button>
-</div>
+<mat-tab-group class="gov-listing-tab-group" [selectedIndex]="currentTab" (selectedIndexChange)="updateTab($event)">
+  <mat-tab label="States">
+    <div class="gov-listing-tab-content">
+      <region-grid [currentURL]="currentRegionsURL" (itemSelected)="updateSubregions($event)"></region-grid>
+    </div>
+  </mat-tab>
+  <mat-tab label="Counties">
+    <div class="gov-listing-tab-content">
+      <subregion-grid [currentURL]="currentSubregionsURL" (itemSelected)="updateCities($event)"></subregion-grid>
+    </div>
+  </mat-tab>
+  <mat-tab label="Cities">
+    <div class="gov-listing-tab-content">
+      <city-grid [currentURL]="currentCitiesURL" (itemSelected)="viewAgendas($event)"></city-grid>
+    </div>
+  </mat-tab>
+</mat-tab-group>
