Implement Agenda detail view

--- a/frontend/src/app/agenda/detail/detail.component.html
+++ b/frontend/src/app/agenda/detail/detail.component.html
@@ -1,3 +1,75 @@
-<p>
-  detail works!
-</p>
+<mat-expansion-panel>
+  <mat-expansion-panel-header>
+    <span class="mat-body-2" *ngIf="agenda">{{agenda.date}}</span>
+    <mat-spinner *ngIf="!agenda" [diameter]="25"></mat-spinner>
+  </mat-expansion-panel-header>
+  <div style="width:100%; text-align: center"  *ngIf="!agenda">
+    <h3>Loading agenda details</h3>
+  <mat-progress-bar [mode]="'indeterminate'" style="width:100%;"></mat-progress-bar>
+  </div>
+  <div *ngIf="agenda" class="detail-container" fxLayout="column">
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Land Area" [(ngModel)]="agenda.land_area">
+    </mat-form-field>
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Population" [(ngModel)]="agenda.population">
+    </mat-form-field>
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Financial Income" [(ngModel)]="agenda.financial_income">
+    </mat-form-field>
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Financial Income Per Capita" [(ngModel)]="agenda.financial_income_per_capita">
+    </mat-form-field>
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Business Tax" [(ngModel)]="agenda.business_tax">
+    </mat-form-field>
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Cannabis Tax" [(ngModel)]="agenda.cannabis_tax">
+    </mat-form-field>
+    <div fxFlex>
+      <mat-radio-group disabled>
+        <mat-radio-button value="R">Republican</mat-radio-button>
+        <mat-slider thumbLabel min="0" max="100" step="1" value="50"></mat-slider>
+        <mat-radio-button value="D">Democrat</mat-radio-button>
+      </mat-radio-group>
+    </div>
+    <div fxFlex>
+      <mat-checkbox [(ngModel)]="agenda.approved_cannabis">Approved Cannabis</mat-checkbox>
+      <mat-checkbox [(ngModel)]="agenda.medical_use">Medical Use</mat-checkbox>
+      <mat-checkbox [(ngModel)]="agenda.prop_64_vote">Proposition 64 Vote</mat-checkbox>
+      <mat-radio-group disabled>
+        <mat-radio-button value="R">Yes</mat-radio-button>
+        <mat-slider thumbLabel min="0" max="100" step="1" value="50"></mat-slider>
+        <mat-radio-button value="D">No</mat-radio-button>
+      </mat-radio-group>
+    </div>
+
+    <mat-checkbox [(ngModel)]="agenda.cultivation_license">Cultivation License</mat-checkbox>
+    <mat-form-field fxFlex>
+      <textarea matInput placeholder="Allowed areas for cultivating cannabis" matAutosizeMinRows="3"
+                matAutosizeMaxRows="10" [(ngModel)]="agenda.cultivation_allowed_areas"></textarea>
+    </mat-form-field>
+    <mat-checkbox [(ngModel)]="agenda.manufacturing_license">Manufacturing License</mat-checkbox>
+    <mat-form-field fxFlex>
+      <textarea matInput placeholder="Allowed areas for manufacturing cannabis products" matAutosizeMinRows="3"
+                matAutosizeMaxRows="10" [(ngModel)]="agenda.manufacturing_allowed_areas"></textarea>
+    </mat-form-field>
+    <mat-checkbox [(ngModel)]="agenda.retail_license">Retail License</mat-checkbox>
+    <mat-form-field fxFlex>
+      <textarea matInput placeholder="Allowed areas for retailing cannabis products" matAutosizeMinRows="3"
+                matAutosizeMaxRows="10" [(ngModel)]="agenda.retail_allowed_areas"></textarea>
+    </mat-form-field>
+    <mat-checkbox [(ngModel)]="agenda.distribution_license">Distribution License</mat-checkbox>
+    <mat-checkbox [(ngModel)]="agenda.microbusiness_license">Microbusiness License</mat-checkbox>
+    <mat-checkbox [(ngModel)]="agenda.laboratory_license">Laboratory License</mat-checkbox>
+    <mat-form-field fxFlex>
+      <input matInput placeholder="Link to agenda video" type="url" [(ngModel)]="agenda.link_to_video">
+      <mat-error></mat-error>
+    </mat-form-field>
+    <mat-form-field fxFlex>
+      <textarea matInput placeholder="Agenda notes" matTextareaAutosize matAutosizeMinRows="3"
+                matAutosizeMaxRows="10" [(ngModel)]="agenda.notes"></textarea>
+    </mat-form-field>
+
+  </div>
+</mat-expansion-panel>
