--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="nav-bar">
-  <div class="nav-tab-group">RETAIL TEST</div>
+  <div class="nav-tab-group"><a [routerLink]="'/home'" style="text-decoration: none; color:inherit"><h1>TITLE GOES HERE</h1></a></div>
 
   <div class="nav-user-group">
     <app-user></app-user>
