--- a/frontend/src/app/agenda/agenda.component.html
+++ b/frontend/src/app/agenda/agenda.component.html
@@ -3,6 +3,6 @@
 <mat-accordion [multi]="true">
     <agenda-detail [agendaUrl]="item" *ngFor="let item of city.agendas"></agenda-detail>
 </mat-accordion>
-<button mat-fab class="add-agenda-button">
-  <mat-icon class="" aria-label="">add</mat-icon>
+<button mat-fab class="add-agenda-button" (click)="createDialog($event)">
+  <mat-icon>add</mat-icon>
 </button>
