--- a/frontend/src/app/navigation/user/user.component.html
+++ b/frontend/src/app/navigation/user/user.component.html
@@ -4,17 +4,8 @@
   <mat-icon>more_vert</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
-  <button mat-menu-item>
-    <mat-icon>dialpad</mat-icon>
-    <span>Redial</span>
-  </button>
-  <button mat-menu-item disabled>
-    <mat-icon>voicemail</mat-icon>
-    <span>Check voicemail</span>
-  </button>
-  <button mat-menu-item>
-    <mat-icon>notifications_off</mat-icon>
-    <span>Disable alerts</span>
+  <button mat-menu-item (click)="logout($event)">
+    <span>Logout</span>
   </button>
 </mat-menu>
 
