--- a/frontend/src/app/listing/listing.component.html
+++ b/frontend/src/app/listing/listing.component.html
@@ -1,9 +1,9 @@
 <mat-tab-group class="gov-listing-tab-group" [selectedIndex]="currentTab" (selectedIndexChange)="updateTab($event)">
-  <mat-tab label="States">
-    <div class="gov-listing-tab-content">
-      <region-grid [currentURL]="currentRegionsURL" (itemSelected)="updateSubregions($event)"></region-grid>
-    </div>
-  </mat-tab>
+  <!--<mat-tab label="States">-->
+    <!--<div class="gov-listing-tab-content">-->
+      <!--<region-grid [currentURL]="currentRegionsURL" (itemSelected)="updateSubregions($event)"></region-grid>-->
+    <!--</div>-->
+  <!--</mat-tab>-->
   <mat-tab label="Counties">
     <div class="gov-listing-tab-content">
       <subregion-grid [currentURL]="currentSubregionsURL" (itemSelected)="updateCities($event)"></subregion-grid>
