--- a/frontend/src/app/listing/grid/grid.component.html
+++ b/frontend/src/app/listing/grid/grid.component.html
@@ -1,13 +1,13 @@
-<div fxLayout="row column" fxLayoutAlign="center center">
-  <mat-card class="card-item" *ngFor="let item of resultList" (click)="select(item.subdivisions, item.id)">
+<div fxLayout='row column' fxLayoutAlign='center center'>
+  <mat-card class='card-item' *ngFor='let item of resultList' (click)='select(item.subdivisions, item.id)'>
     <mat-card-header>
-      <mat-card-title class="government-name">{{item.name}}</mat-card-title>
+      <mat-card-title class='government-name'>{{item.name}}</mat-card-title>
     </mat-card-header>
     <!--<mat-card-content>-->
     <!--{{item.name}}-->
     <!--</mat-card-content>-->
   </mat-card>
 </div>
-<div style="width: 100%; text-align: center ">
-  <button mat-raised-button color="primary" (click)="next()">Load More</button>
+<div style='width: 100%; text-align: center '>
+  <button mat-raised-button color='primary' (click)='next()'>Load More</button>
 </div>
