--- a/frontend/src/app/navigation/navigation.component.html
+++ b/frontend/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar class="nav-bar">
-  <div class="nav-tab-group"><a [routerLink]="'/'"><h1>TITLE GOES HERE</h1></a></div>
+<mat-toolbar class='nav-bar'>
+  <div class='nav-tab-group'><a [routerLink]="'/'"><h1>TITLE GOES HERE</h1></a></div>
 
-  <div class="nav-user-group">
+  <div class='nav-user-group'>
     <app-user></app-user>
   </div>
 
