--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,11 +2,16 @@
 @import "custom-theme.scss";
 
 a {
-  text-decoration: none; color:inherit
+  text-decoration: none;
+  color: inherit
 }
 
 body {
   width: 100%;
+}
+
+hr {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .container {
