--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "custom-theme.scss";
 
+html {
+  overflow-y: scroll;
+}
+
 a {
   text-decoration: none;
   color: inherit
